Fix NgZone bug, SQL reserved word, face quality checks & AI model pre-warming
- Angular: wrap canvas.toBlob() callbacks in zone.run() in login, face-setup
  and viewer-dashboard to fix permanent loading state (change detection bug)
- Angular: auto-close face scan modal after successful registration (1.5s delay)
- Angular: reduce camera resolution to 640x480 in all 3 face scan components
- Angular: add token-error interceptor service
- Backend: fix FaceNotification.read mapped to column is_read (MariaDB reserved word)
- AI engine: pre-warm InsightFace buffalo_l + YOLOv8 models at server startup
  to eliminate 10-15s delay on first face scan request
- AI engine: add frontal face validation (det_score >= 0.65, yaw <= 35 degrees)
  in /api/face/register and /api/face/recognize endpoints
- General: code cleanup, remove LaTeX report files and class diagram

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>